fix(card): adjust tag and button alignment in the title. Closes #547

--- a/packages/components/src/components/bal-tag/bal-tag.sass
+++ b/packages/components/src/components/bal-tag/bal-tag.sass
@@ -14,6 +14,7 @@
   // sizes
   +modifier(is-small)
     padding: 0 0.75rem 0 0.75rem
+    max-height: 1.5rem
   +modifier(is-medium)
     max-height: 2.5rem
     padding: 0.5rem 1rem 0.5rem 1rem
